5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/1685/executions/1602_2894.log
== TEST (2019-03-20 18:23:37) 
-- CODE:
var =x,y,total

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 4
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:23:48) 
-- CODE:
var =x

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 4
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:25:03) 
-- CODE:
var = input ("valor unitario")

# Leitura das entradas e conversao para float:
????? = f???t(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 4
    ????? = f???t(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:25:55) 
-- CODE:
var = input ("valor unitario")

# Leitura das entradas e conversao para float:
print = floatt(input("20"))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(?????)
-- ERROR:
File "XXXX", line 7
    total = ?????
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:40:48) 
-- CODE:
var = input (qual o valor unitario do jogo: )

# Leitura das entradas e conversao para float:
x = float(input("qual o valor unitario do jogo:"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*x+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 1
    var = input (qual o valor unitario do jogo: )
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:41:31) 
-- CODE:
var = float(input(qual o valor unitario do jogo: ))

# Leitura das entradas e conversao para float:
x = float(input("qual o valor unitario do jogo:"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*x+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 1
    var = float(input(qual o valor unitario do jogo: ))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:41:57) 
-- CODE:
var = float(input("qual o valor unitario do jogo:" ))

# Leitura das entradas e conversao para float:
x = float(input("qual o valor unitario do jogo:"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*x+45

# Impressao do valor total:
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 18:42:35) 
-- CODE:

# Leitura das entradas e conversao para float:
x = float(input("qual o valor unitario do jogo:"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*x+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 18:42:44) 
-- CODE:

# Leitura das entradas e conversao para float:
x = float(input("qual o valor unitario do jogo:"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8*x+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.123175
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
